fix: исправлены различные уточнения